@@ -24,6 +24,7 @@ Direct3D 11
 	* Changed BlendStateDescription to implement IEquatable<T> and GetHashCode()
 	* Fixed the DeviceContext.MapSubresource function to properly calculate the size of the returned data.
 	* Fixed the datatypes of PipelineStatistics members to be Int64 instead of Int32.
+	* Changed DeviceContext.IsDataAvailable to return a boolean result.
 
 Direct2D
 	* Fixed a bug that incorrectly created RectangleGeometry from a RectangleF.
